--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<jackson.version>2.7.2</jackson.version>
-	<spring.version>4.3.7.RELEASE</spring.version>
+	<spring.version>4.3.14</spring.version>
 	</properties>
 	<dependencies>
 		<!-- 单元测试 -->
